[package]
name = "pikvm-hid-stm32"
description = "A firmware for an alternative HID adapter for PiKVM, using an stm32 microcontroller"
version = "0.1.0"
authors = ["Jan Niehusmann <jan@gondor.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
cortex-m = "0.6.4"
cortex-m-rt = "0.6.13"
stm32f1xx-hal = { version = "0.7.0", features = ["stm32f103", "medium", "stm32-usbd", "rt"] }
panic-semihosting = "0.5.6"
usb-device = "0.2.7"
embedded-hal = "0.2.4"
cortex-m-rtic = "0.5.5"
nb = "1.0.0"
cortex-m-semihosting = "0.3.5"
usbd-hid-device = "0.1.1"
# According to cargo bloat, this adds about 20kB (44%) to the
# code size. In the firmware becomes too large, this would be
# a candidate for a replacement.
# An easier approach to significantly reduce the firmware
# size is enabling lto below.
keycode = "0.3.0"

[profile.release]
debug = true
# opt-level = "z"
# lto = true
# codegen-units = 1

[features]
# use wfi for idle
wfi = []
